syntax = "proto3";

package pb;

service Msgsvc {
    
    rpc Echo (EchoRequest) returns (EchoReply) {
    }

    rpc SayHello (SayHelloRequest) returns (SayHelloReply) {
    }
}

message EchoRequest {
    string word = 1;
}

message EchoReply {
    string rs = 2;
    string err = 3;
}

message SayHelloRequest {
    string saidword = 1;
    string want = 2;
}

message SayHelloReply {
    string rs = 2;
    string err = 3;
}
